#139 Autenticação com o google

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <title>Quiz Room</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.b552d54739f8363dd486.css"></head>
+  <script src="https://apis.google.com/js/api:client.js"></script>
+<link rel="stylesheet" href="styles.7d190e808a5e375b5b2b.css"></head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.b4daf421c94934f530d4.js"></script><script type="text/javascript" src="main.a1156a7053493ae2e4a7.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.b4daf421c94934f530d4.js"></script><script type="text/javascript" src="main.7226e080a23c8f45b37e.js"></script></body>
 
 </html>
