--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title>Quiz Room</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://apis.google.com/js/api:client.js"></script>
 </head>
 
 <body>
