--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://apis.google.com/js/api:client.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
 <link rel="stylesheet" href="styles.7d190e808a5e375b5b2b.css"></head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.b4daf421c94934f530d4.js"></script><script type="text/javascript" src="main.7226e080a23c8f45b37e.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.b4daf421c94934f530d4.js"></script><script type="text/javascript" src="main.8fa78640a92fb6aa15cd.js"></script></body>
 
 </html>
