--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <script src="/socket.io/socket.io.js"></script>
-<link rel="stylesheet" href="styles.e8ed7ac04a2f976d913d.css"></head>
+<link rel="stylesheet" href="styles.101d1f0c8bd921387177.css"></head>
 
 <body>
   <app-root></app-root>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://apis.google.com/js/api:client.js"></script>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.b4daf421c94934f530d4.js"></script><script type="text/javascript" src="main.92ba3e337ad0a1916f6a.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a8e1fcb1caf2b6c7cdae.js"></script><script type="text/javascript" src="scripts.87d1ecee33390b531bbd.js"></script><script type="text/javascript" src="main.1cc0161d77da7ab9a7ef.js"></script></body>
 
 </html>
